--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-jsbeautifier": "^0.2.13",
     "grunt-rsync": "^3.0.0",
     "grunt-screeps": "^1.4.0",
+    "grunt-shell": "^2.1.0",
     "time-grunt": "^1.4.0"
   },
   "scripts": {
