--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Screeps Game Code ",
   "main": "src/main.js",
   "scripts": {
-    "tta": "grunt deploy-local"
+    "local-deploy": "grunt deploy-local",
+    "screeps-deplay": "grunt deploy"
   },
   "dependencies": {
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-remove-logging": "^0.2.0",
     "lodash": "latest"
   },
   "devDependencies": {
+    "grunt-remove-logging": "^0.2.0",
     "grunt": "^1.0.3",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-copy": "^1.0.0",
@@ -21,6 +21,7 @@
     "grunt-rsync": "^3.0.0",
     "grunt-screeps": "^1.4.0",
     "grunt-shell": "^2.1.0",
+    "grunt-string-replace": "^1.3.1",
     "grunt-stripcomments": "^0.7.2",
     "time-grunt": "^1.4.0"
   },
