--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "screeps-deplay": "grunt deploy"
   },
   "dependencies": {
-    "lodash": "latest"
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "grunt-remove-logging": "^0.2.0",
